Spacing and alignment fixes (#7)
* Fix h1 selector and stop wrapping list h1 for correct spacing

* Add responsive body padding

* Change list marking positioning to align vertically with other content

* Add progressive step-through for count-downs

* Revert "Add progressive step-through for count-downs"

This reverts commit 711732cc700ef91b1f1fa732e0de1d80a3792e0e.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,8 +22,8 @@
 body {
 	font: 16pt/1.2 serif;
 	font-family: var(--font-family--sans-serif);
-	margin: 2rem;
-	padding: 0;
+	margin: 0;
+	padding: clamp(2rem, 5svw, 3rem);
 
 	max-width: var(--content-max-width);
 }
@@ -78,7 +78,7 @@ body > * + * {
 }
 
 .list {
-	padding-inline-start: var(--primary-size);
+	padding-inline-start: 3rem;
 }
 
 .list.list--no-style {
